--- a/policies/refund-policy.html
+++ b/policies/refund-policy.html
@@ -96,9 +96,8 @@
 
     <h5>Non-Returnable Items</h5>
     <ul>
-        <li>Customized or tailored items made specifically for you.</li>
+        <li>PRE-BOOK (Customized or tailored) items made specifically for you.</li>
         <li>Items with removed tags, missing original packaging, or signs of wear/damage (including perfume or makeup marks).</li>
-
         <li>Items where colour bleed occurs due to natural dyes when care instructions were not followed.</li>
     </ul>
 
@@ -122,6 +121,13 @@
       <h5>International Orders</h5>
       <p>
         International returns/exchanges may not be available or can incur higher shipping costs. Please contact us to check feasibility before initiating a return.
+      </p>
+
+      <h5>Care Instructions</h5>
+      <p>
+        For best results, dry clean only. If needed, gently hand wash in cold water using a mild detergent. 
+        Do not soak, wring, or bleach. Lay flat to dry in the shade, and steam or iron on low heat using a protective cloth. 
+        As this is a handcrafted piece, please treat it with elegance and care.
       </p>
 
     <hr style="margin: 30px 0;" />
