--- a/policies/privacy-policy.html
+++ b/policies/privacy-policy.html
@@ -27,6 +27,8 @@
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Funnel+Sans:ital,wght@0,300..800;1,300..800&family=Nunito+Sans:ital,opsz,wght@0,6..12,200..1000;1,6..12,200..1000&family=Outfit:wght@100..900&family=Petit+Formal+Script&family=Zalando+Sans+Expanded:ital,wght@0,200..900;1,200..900&display=swap" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css2?family=Cookie&family=Twinkle+Star&display=swap" rel="stylesheet">
+
+  <link rel="icon" type="image/x-icon" href="assets/images/favicon.ico">
 </head>
 
 <body id="top">
@@ -101,6 +103,13 @@
     <p>
       We take reasonable steps to protect your information. Order-related data may be stored in secure systems.
       Payment details are not collected or stored by us on this website.
+    </p>
+
+    <h5>Care Instructions</h5>
+    <p>
+      For best results, dry clean only. If needed, gently hand wash in cold water using a mild detergent. 
+      Do not soak, wring, or bleach. Lay flat to dry in the shade, and steam or iron on low heat using a protective cloth. 
+      As this is a handcrafted piece, please treat it with elegance and care.
     </p>
 
     <hr style="margin: 30px 0;" />
