--- a/policies/shipping-policy.html
+++ b/policies/shipping-policy.html
@@ -72,10 +72,9 @@
     <p class="policy-meta">Effective date: <span class="policy-effective-year">2025</span> • <strong class="policy-brand-name"></strong></p>
 
     <h5>Processing Time</h5>
-    <p class="section-text">
-      Orders for in-store items are processed within 1–3 business days.
-Custom or made-to-order items may take 7–14 business days, and we will notify you if additional processing time is required.
-    </p>
+    <p class="section-text">Orders for in-store items are processed within 1–3 business days.</p>
+    <p>Custom or made-to-order items may take 7–14 business days.</p>
+    <p>We will notify you if additional processing time is required.</p>
 
     <h5>Shipping Methods</h5>
     <p>
@@ -84,7 +83,7 @@ Custom or made-to-order items may take 7–14 business days, and we will notify 
 
     <h5>Domestic Shipping Charges</h5>
     <p>
-      Free Shipping all over India. For the Fast courier service an amount of Rs. 250/- will be charged.
+      Free Shipping all over India (For products above 1000/- Rupees). For the Fast courier service an amount of Rs. 250/- will be charged.
     </p>
 
     <h5>Delivery Time</h5>
@@ -101,6 +100,13 @@ Custom or made-to-order items may take 7–14 business days, and we will notify 
     <h5>Address Accuracy</h5>
     <p>
       Please ensure your address and contact details are accurate to avoid delays or non-delivery.
+    </p>
+
+    <h5>Care Instructions</h5>
+    <p>
+      For best results, dry clean only. If needed, gently hand wash in cold water using a mild detergent. 
+      Do not soak, wring, or bleach. Lay flat to dry in the shade, and steam or iron on low heat using a protective cloth. 
+      As this is a handcrafted piece, please treat it with elegance and care.
     </p>
 
     <hr style="margin: 30px 0;" />
